# MiniCRT

./: .gitignore  CMakeLists.txt  LICENSE
.github/workflows/: build.yml
cmake/: minicrtConfig.cmake.in
include/minicrt/: crt.h  memory.h  string.h
src/crt/: crt_entry.cpp  crt_memory.cpp  crt_string.cpp
tests/: CMakeLists.txt  no_std_lib_test.cpp  simple_test.cpp  test_string.cpp
